[tool.poetry]
name = "pyswe-rest"
version = "0.1.0"
description = ""
authors = ["Ign. Aiom Ominous <aiom.ominous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
astrolog = { path = "../astrolog" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
