[tool.poetry]
name = "astrolog-rest"
version = "0.1.0"
description = "REST API for swiss epehemris"
authors = ["Ign. Aiom Ominous <aiom.ominous@gmail.com>"]
keywords = ["astronomy", "swisseph", "astrology", "swissephemeris", "REST"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License", "Topic :: Scientific/Engineering :: Astronomy"]
license = "BSD-4-Clause"

[tool.poetry.urls]
repository = "https://github.com/astro-pro/astrolog-rest"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
astrolog = "^0.5"
pyswisseph = "=2.10.02.0.dev1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
